修复邮件发送失败导致用户注册失败的bug

--- a/src/main/java/log4j.properties
+++ b/src/main/java/log4j.properties
@@ -2,6 +2,7 @@
 log4j.rootLogger = debug,stdout,D,E
 
 log4j.logger.org.hibernate = error
+log4j.logger.org.springframework=debug,console,info
 
 ### \u8F93\u51FA\u4FE1\u606F\u5230\u63A7\u5236\u62AC ###
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
