--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,13 @@
 		<version>2.5.3</version>
 	</dependency>
 	
+	<!-- 模板引擎 -->
+	<dependency>
+    	<groupId>org.apache.velocity</groupId>
+    	<artifactId>velocity</artifactId>
+    	<version>1.7</version>
+	</dependency>
+	
   </dependencies>
   
 </project>
