--- a/pom.xml
+++ b/pom.xml
@@ -199,6 +199,13 @@
 			<version>5.0.0</version>
 		</dependency>
 
+		<!-- HTML解析器 -->
+		<dependency>
+		    <groupId>org.jsoup</groupId>
+		    <artifactId>jsoup</artifactId>
+		    <version>1.10.2</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
