--- a/src/main/java/log4j.properties
+++ b/src/main/java/log4j.properties
@@ -1,10 +1,18 @@
-log4j.rootLogger = debug,stdout,D,E
+log4j.rootLogger = error,stdout,D,E
 
-log4j.logger.org.mybatis.spring = info
-log4j.logger.org.apache.ibatis = info
-log4j.logger.java.sql.PreparedStatement=DEBUG 
-log4j.logger.org.hibernate = info
+#log4j.logger.org.mybatis.spring = info
+#log4j.logger.org.apache.ibatis = info
+#log4j.logger.java.sql.PreparedStatement=DEBUG 
 
+#print scratch log
+log4j.logger.scratch.service.anime = INFO, scratch
+log4j.logger.scratch.service.reader.anime = INFO, scratch
+
+log4j.appender.scratch = org.apache.log4j.DailyRollingFileAppender
+log4j.appender.scratch.File = logs/scratch.log 
+log4j.appender.scratch.Append = true
+log4j.appender.scratch.layout = org.apache.log4j.PatternLayout
+log4j.appender.scratch.layout.ConversionPattern = [%-5p] %d{yyyy-MM-dd HH:mm:ss,SSS} method:%l%n%m%n
 
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target = System.out
@@ -12,14 +20,14 @@ log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern = [%-5p] %d{yyyy-MM-dd HH:mm:ss,SSS} method:%l%n%m%n
 
 log4j.appender.D = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.D.File = D:/logs/log.log
+log4j.appender.D.File = logs/log.log
 log4j.appender.D.Append = true
 log4j.appender.D.Threshold = DEBUG 
 log4j.appender.D.layout = org.apache.log4j.PatternLayout
 log4j.appender.D.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
 
 log4j.appender.E = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.E.File = D:/logs/error.log 
+log4j.appender.E.File = logs/error.log 
 log4j.appender.E.Append = true
 log4j.appender.E.Threshold = ERROR 
 log4j.appender.E.layout = org.apache.log4j.PatternLayout
