--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,18 @@
 	</build>
 
 	<dependencies>
+		<dependency>
+    		<groupId>commons-fileupload</groupId>
+    		<artifactId>commons-fileupload</artifactId>
+    		<version>1.2.2</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.0.1</version>
+		</dependency>
+	
 		<!-- 标签库 -->
 		<dependency>
 			<groupId>jstl</groupId>
