add anime pic file upload

--- a/src/main/java/log4j.properties
+++ b/src/main/java/log4j.properties
@@ -1,18 +1,21 @@
-log4j.rootLogger = error,stdout,D,E
+log4j.rootLogger = ERROR,stdout,D,E
 
-#log4j.logger.org.mybatis.spring = info
-#log4j.logger.org.apache.ibatis = info
-#log4j.logger.java.sql.PreparedStatement=DEBUG 
+log4j.logger.scratch.dao = DEBUG
+
+#log4j.logger.org.mybatis.spring = DEBUG
+#log4j.logger.org.apache.ibatis.logging.jdbc.BaseJdbcLogger = DEBUG
+#log4j.logger.java.sql.PreparedStatement= DEBUG 
 
 #print scratch log
-log4j.logger.scratch.service.anime = INFO, scratch
-log4j.logger.scratch.service.reader.anime = INFO, scratch
+log4j.additivity.scratch.service.anime = false
+log4j.logger.scratch.service.anime = DEBUG, stdout, scratch
+log4j.logger.scratch.service.reader.anime = DEBUG, stdout, scratch
 
 log4j.appender.scratch = org.apache.log4j.DailyRollingFileAppender
 log4j.appender.scratch.File = logs/scratch.log 
 log4j.appender.scratch.Append = true
 log4j.appender.scratch.layout = org.apache.log4j.PatternLayout
-log4j.appender.scratch.layout.ConversionPattern = [%-5p] %d{yyyy-MM-dd HH:mm:ss,SSS} method:%l%n%m%n
+log4j.appender.scratch.layout.ConversionPattern = [%-5p] %d{MM-dd HH:mm} %m%n
 
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target = System.out
