--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 	</properties>
 
 	<dependencies>
-	
+
 		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
@@ -89,7 +89,7 @@
 			<version>4.2.0.Final</version>
 		</dependency>
 
-		
+
 		<!-- 切面 -->
 		<dependency>
 			<groupId>org.aspectj</groupId>
@@ -102,7 +102,7 @@
 			<artifactId>tiles-core</artifactId>
 			<version>2.2.1</version>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>org.apache.tiles</groupId>
 			<artifactId>tiles-request-api</artifactId>
@@ -136,7 +136,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.11</version>
+			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -193,9 +193,9 @@
 			<artifactId>jsoup</artifactId>
 			<version>1.10.2</version>
 		</dependency>
-		
+
 		<!-- Spring -->
-		
+
 		<!-- Spring Security -->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
@@ -203,21 +203,21 @@
 			<version>${spring-security-version}</version>
 		</dependency>
 
-		<!-- Spring Test-->
+		<!-- Spring Test -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<version>${spring-framework-version}</version>
 		</dependency>
-		
-		<!-- Spring WebMvc-->
+
+		<!-- Spring WebMvc -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<version>${spring-framework-version}</version>
 		</dependency>
 
-		<!-- Spring AOP-->
+		<!-- Spring AOP -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aop</artifactId>
@@ -243,7 +243,7 @@
 			<artifactId>spring-context-support</artifactId>
 			<version>${spring-framework-version}</version>
 		</dependency>
-		
+
 		<!-- Spring Social -->
 		<dependency>
 			<groupId>org.springframework.social</groupId>
@@ -268,15 +268,41 @@
 			<artifactId>spring-social-web</artifactId>
 			<version>${spring-social-version}</version>
 		</dependency>
-		
-		<!-- Spring Social GitHub-->
+
+		<!-- Spring Social GitHub -->
 		<dependency>
 			<groupId>org.springframework.social</groupId>
 			<artifactId>spring-social-github</artifactId>
 			<version>1.0.0.M4</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.sachinhandiekar</groupId>
+			<artifactId>spring-social-live</artifactId>
+			<version>1.0.4</version>
+			<exclusions>
+				<exclusion>
+					<groupId>javax.servlet</groupId>
+					<artifactId>servlet-api</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.social</groupId>
+			<artifactId>spring-social-google</artifactId>
+			<version>1.0.0.RC1</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy-all</artifactId>
+			<version>2.4.11</version>
+		</dependency>
+
 	</dependencies>
-	
+
 	<repositories>
 		<repository>
 			<id>org.springframework.maven.milestone</id>
@@ -284,4 +310,5 @@
 			<url>http://repo.spring.io/milestone</url>
 		</repository>
 	</repositories>
+
 </project>
