--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,41 @@
 
 	<build>
 		<finalName>scratch</finalName>
+		<pluginManagement>
+		
+		<plugins>
+			<plugin>
+    	    	<groupId>org.apache.maven.plugins</groupId>
+    	    	<artifactId>maven-surefire-plugin</artifactId>
+    	    	<configuration>
+    	    	  <skip>true</skip>
+    	    	</configuration>
+    		</plugin>
+		
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>  
+	    	    <artifactId>maven-compiler-plugin</artifactId>  
+	    	    <configuration>  
+	    	        <source>1.7</source>  
+	    	        <target>1.7</target>  
+	    	    </configuration>  
+			</plugin>
+		
+			<plugin>
+			    <groupId>org.apache.tomcat.maven</groupId>
+			    <artifactId>tomcat7-maven-plugin</artifactId>
+			    <version>2.2</version>
+				<configuration>
+					<url>http://localhost:8080/manager/text</url>
+					<server>tomcat7</server>
+					<username>hejianok</username>
+					<password>hejianok</password>
+				</configuration>
+				
+				
+			</plugin>
+		</plugins> 
+		</pluginManagement>
 	</build>
 
 	<properties>
@@ -19,7 +54,20 @@
 	</properties>
 
 	<dependencies>
-
+	
+		<dependency>
+		    <groupId>com.rabbitmq</groupId>
+		    <artifactId>amqp-client</artifactId>
+		    <version>4.1.0</version>
+		</dependency>
+	
+		<dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>tomcat-servlet-api</artifactId>
+			<version>7.0.0</version>
+			<scope>provided</scope>
+		</dependency>
+	
 		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
