--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
 		    <groupId>com.rabbitmq</groupId>
 		    <artifactId>amqp-client</artifactId>
 		    <version>4.1.0</version>
+		    <exclusions>
+		    	<exclusion>
+		    		<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-api</artifactId>
+		    	</exclusion>
+		    </exclusions>
 		</dependency>
 	
 		<dependency>
