--- a/pom.xml
+++ b/pom.xml
@@ -267,11 +267,6 @@
 		<!-- Spring -->
 
 		<!-- Spring Security -->
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-core</artifactId>
-			<version>${spring-security-version}</version>
-		</dependency>
 
 		<!-- Spring Test -->
 		<dependency>
@@ -313,7 +308,7 @@
 			<artifactId>spring-context-support</artifactId>
 			<version>${spring-framework-version}</version>
 		</dependency>
-
+		
 		<!-- Spring Social -->
 		<dependency>
 			<groupId>org.springframework.social</groupId>
@@ -363,7 +358,18 @@
 			<artifactId>spring-social-google</artifactId>
 			<version>1.0.0.RC1</version>
 		</dependency>
-
+		
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>4.2.0.RC1</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>4.2.0.RC1</version>
+		</dependency>
 
 	</dependencies>
 
