--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,8 @@
 				<groupId>org.apache.maven.plugins</groupId>  
 	    	    <artifactId>maven-compiler-plugin</artifactId>  
 	    	    <configuration>  
-	    	        <source>1.7</source>  
-	    	        <target>1.7</target>  
+	    	        <source>1.8</source>
+	    	        <target>1.8</target>
 	    	    </configuration>  
 			</plugin>
 		
@@ -115,14 +115,13 @@
 		<dependency>
 			<groupId>javax.mail</groupId>
 			<artifactId>mail</artifactId>
-			<version>1.3.1</version>
+			<version>1.4</version>
 		</dependency>
 
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.16</version>
-			<scope>runtime</scope>
 		</dependency>
 
 		<dependency>
@@ -353,7 +352,7 @@
 			<version>1.0.0.M4</version>
 		</dependency>
 
-		<dependency>
+		<!--<dependency>
 			<groupId>com.sachinhandiekar</groupId>
 			<artifactId>spring-social-live</artifactId>
 			<version>1.0.4</version>
@@ -363,7 +362,7 @@
 					<artifactId>servlet-api</artifactId>
 				</exclusion>
 			</exclusions>
-		</dependency>
+		</dependency>-->
 
 		<dependency>
 			<groupId>org.springframework.social</groupId>
