--- a/pom.xml
+++ b/pom.xml
@@ -136,11 +136,11 @@
 			<version>5.1.39</version>
 		</dependency>
 
-		<dependency>
+<!--		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-jdk14</artifactId>
-			<version>1.5.6</version>
-		</dependency>
+			<version>1.5.0</version>
+		</dependency>-->
 
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -380,6 +380,18 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
 			<version>4.2.0.RC1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<version>4.2.0.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.jayway.jsonpath</groupId>
+			<artifactId>json-path</artifactId>
+			<version>2.3.0</version>
 		</dependency>
 
 	</dependencies>
