--- a/src/main/java/log4j.properties
+++ b/src/main/java/log4j.properties
@@ -1,10 +1,10 @@
 log4j.rootLogger = ERROR,stdout,D,E
-
+log4j.logger.scratch.api = DEBUG
 log4j.logger.scratch.dao = DEBUG
 
-#log4j.logger.org.mybatis.spring = DEBUG
-#log4j.logger.org.apache.ibatis.logging.jdbc.BaseJdbcLogger = DEBUG
-#log4j.logger.java.sql.PreparedStatement= DEBUG 
+log4j.logger.org.mybatis.spring = DEBUG
+log4j.logger.org.apache.ibatis.logging.jdbc.BaseJdbcLogger = DEBUG
+log4j.logger.java.sql.PreparedStatement= DEBUG 
 
 #print scratch log
 log4j.additivity.scratch.service.anime = false
