--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE web-app PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN" "http://java.sun.com/dtd/web-app_2_3.dtd">
-
-<web-app>
+<web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee"
+		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
+    http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 	<display-name>PutHereTheNameOfYourWebApp</display-name>
 	<description>This a description of my web app made by Eclipse</description>
 
@@ -17,7 +18,11 @@
 			<param-name>contextConfigLocation</param-name>
 			<param-value>/WEB-INF/spring-servlet.xml</param-value>
 		</init-param>
+		<multipart-config>
+			<max-request-size>1000</max-request-size>
+		</multipart-config>
 		<load-on-startup>1</load-on-startup>
+		<async-supported>true</async-supported>
 	</servlet>
 
 	<servlet-mapping>
@@ -36,6 +41,7 @@
 			<param-name>forceEncoding</param-name>
 			<param-value>true</param-value>
 		</init-param>
+		<async-supported>true</async-supported>
 	</filter>
 	
 	<filter-mapping>
@@ -46,7 +52,7 @@
 	<!-- 该过滤器是为了让Transaction在JSP页面仍存在，这样使用了LAZY加载方式的MODEL，在展现层仍可以读取数据 -->
 	<filter>
 		<filter-name>OpenSessionInViewFilter</filter-name>
-		<filter-class>org.springframework.orm.hibernate4.support.OpenSessionInViewFilter</filter-class>
+		<filter-class>org.springframework.orm.hibernate5.support.OpenSessionInViewFilter</filter-class>
 		<init-param>
 			<param-name>sessionFactoryBeanName</param-name>
 			<param-value>hibernateSessionFactory</param-value>
@@ -59,29 +65,25 @@
 			<param-name>flushMode</param-name>
 			<param-value>AUTO</param-value>
 		</init-param>
+		<async-supported>true</async-supported>
 	</filter>
 	
 	<filter-mapping>
 		<filter-name>OpenSessionInViewFilter</filter-name>
 		<url-pattern>/*</url-pattern>
-	</filter-mapping>	
+	</filter-mapping>
 	
 	<!-- security filter -->
 	<filter>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+		<async-supported>true</async-supported>
 	</filter>
 	
 	<filter-mapping>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	
-	<jsp-config>  
-	  <jsp-property-group>  
-	    <url-pattern>*.jsp</url-pattern>  
-	    <el-ignored>false</el-ignored>  
-	  </jsp-property-group>  
-	</jsp-config>
-	
+
+
 </web-app>
